# Peer

./: .gitignore  CMakeLists.txt  README.md  peer.cfg
.github/: actions.yml
.github/workflows/: main.yml
src/: App.cpp  App.h  CommonTypes.h  ConfigParser.cpp  ConfigParser.h  IApp.h  ISocket.h  Logger.h  MiddleWare.cpp  MiddleWare.h  UdpSocket.cpp  UdpSocket.h  main.cpp
test/: ChecksumTest.cpp  MiddleWareTest.cpp  TestEnvironment.h  tester.cpp
test/integration/: peer1_local.cfg  peer2_local.cfg  peer3_local.cfg  run_all_tests.sh  single_peer_local.cfg  test0_single_peer.sh  test1_send_message.sh  test2_send_message_then_fail.sh  test3_peer1_and_peer2_fail.sh  test4_only_peer2_fails.sh  test5_peer1_and_peer2_simultaneously.sh  test6_integrity.sh  test7_validity.sh  test8_agreement.sh  test9_single_peer_does_not_deliver.sh
